# stackviz-deployer

./: .coveragerc  .eslintrc.json  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.rst  fds-config.js  nginx.conf  package.json  requirements.txt  routes.js  setup.cfg
doc/source/: conf.py  index.rst  installation.rst  usage.rst
public/: go.html  index.html
public/css/: stackviz.css
public/js/: stackviz-go.js  stackviz.js
stackviz_deployer/: __init__.py
stackviz_deployer/api/: api.py
stackviz_deployer/db/: database.py  models.py
stackviz_deployer/parser/: console_parser.py  subunit_parser.py
stackviz_deployer/scraper/: artifacts_list.py  gerrit_list.py  url_matcher.py
stackviz_deployer/tasks/: console_artifacts.py  subunit_artifacts.py  tasks.py
stackviz_deployer/tests/: base.py  test_stackviz_deployer.py
